# -*- makefile -*-
#
# PMIx copyrights:
# Copyright (c) 2013-2014 Intel, Inc. All rights reserved
#
#########################
# Copyright (c) 2004-2005 The Trustees of Indiana University and Indiana
#                         University Research and Technology
#                         Corporation.  All rights reserved.
# Copyright (c) 2004-2005 The University of Tennessee and The University
#                         of Tennessee Research Foundation.  All rights
#                         reserved.
# Copyright (c) 2004-2005 High Performance Computing Center Stuttgart,
#                         University of Stuttgart.  All rights reserved.
# Copyright (c) 2004-2005 The Regents of the University of California.
#                         All rights reserved.
# Copyright (c) 2012      Los Alamos National Security, Inc.  All rights reserved. 
#########################
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

# This makefile.am does not stand on its own - it is included from
# src/Makefile.am

headers += \
         src/buffer_ops/buffer_ops.h \
         src/buffer_ops/types.h \
         src/buffer_ops/internal.h

sources += \
        src/buffer_ops/compare.c \
        src/buffer_ops/copy.c \
        src/buffer_ops/dump.c \
        src/buffer_ops/internal_functions.c \
        src/buffer_ops/load_unload.c \
        src/buffer_ops/lookup.c \
        src/buffer_ops/open_close.c \
        src/buffer_ops/pack.c \
        src/buffer_ops/peek.c \
        src/buffer_ops/print.c \
        src/buffer_ops/register.c \
        src/buffer_ops/unpack.c
