#
# Copyright (c) 2014      Intel, Inc.  All rights reserved.
# Copyright (c) 2014      Artem Y. Polyakov <artpol84@gmail.com>.
#                         All rights reserved.
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

headers += \
        src/client/pmix_client_hash.h \
        src/client/pmix_client.h

sources += \
        src/client/pmix_client_hash.c \
        src/client/pmix_client.c \
        src/client/pmi1.c \
        src/client/usock.c


