#
# Copyright (c) 2014      Intel, Inc.  All rights reserved.
# Copyright (c) 2014      Artem Y. Polyakov <artpol84@gmail.com>.
#                         All rights reserved.
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

server_headers += \
        src/server/pmix_server.h

server_sources += \
        src/server/pmix_server.c

