#
# PMIx copyrights:
# Copyright (c) 2013-2014 Intel, Inc. All rights reserved
#
#**********************************
# Copyright (c) 2004-2005 The Trustees of Indiana University and Indiana
#                         University Research and Technology
#                         Corporation.  All rights reserved.
# Copyright (c) 2004-2005 The University of Tennessee and The University
#                         of Tennessee Research Foundation.  All rights
#                         reserved.
# Copyright (c) 2004-2005 High Performance Computing Center Stuttgart,
#                         University of Stuttgart.  All rights reserved.
# Copyright (c) 2004-2005 The Regents of the University of California.
#                         All rights reserved.
# Copyright (c) 2007-2010 Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2013      NVIDIA Corporation.  All rights reserved.
# Copyright (c) 2013      Intel, Inc. All rights reserved
#**********************************
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

# Source code files

dist_pmixdata_DATA += src/util/help-pmix-util.txt

headers += \
        src/util/argv.h \
        src/util/error.h \
        src/util/printf.h \
        src/util/output.h \
        src/util/pmix_environ.h \
        src/util/crc.h \
        src/util/progress_threads.h \
        src/util/fd.h

sources += \
        src/util/argv.c \
        src/util/error.c \
        src/util/printf.c \
        src/util/output.c \
        src/util/pmix_environ.c \
        src/util/crc.c \
        src/util/progress_threads.c \
        src/util/fd.c
